--- a/piezasbroncehtml/pieza_bronce1.html
+++ b/piezasbroncehtml/pieza_bronce1.html
@@ -28,12 +28,16 @@
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
         <h2 class="text-3xl font-bold mb-4 text-gray-200">Estatua de Bronce Guerrero Masai. Arte Contemporaneo</h2>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200">
-         <!----> 
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+       Esta escultura representa a un guerrero masái, figura central en la identidad cultural del pueblo masái, asentado en regiones de Kenia y Tanzania. Los guerreros, conocidos como moran, tradicionalmente desempeñan funciones de protección comunitaria, cuidado del ganado y participación en ceremonias de iniciación.
         </p>
-        <ul class="list-disc pl-5 text-gray-200">
+         <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+       La pieza destaca por su estilización alargada y su diseño minimalista, rasgos comunes en la artesanía africana moderna destinada a la expresión simbólica más que a la representación realista. El manto rojo que cubre la figura recuerda al tradicional shúkà, tejido emblemático del pueblo masái, asociado a la fuerza, la vitalidad y la cohesión del grupo.
+        </p>
+          <ul class="list-disc pl-5 text-gray-200">
           <li><strong>Tamaño:</strong> 40 cm de alto</li>
           <li><strong>Material:</strong> Bronce</li>
+          <li><strong>Origen:</strong> Contemporaneo. Senegal</li>
           <!--<li><strong>Origen:</strong> Región Yoruba, siglo XIX</li>
           <l--<strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
         </ul>
