--- a/piezasbroncehtml/pieza_bronce4.html
+++ b/piezasbroncehtml/pieza_bronce4.html
@@ -27,15 +27,21 @@
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">Bronce 1 del siglo XX</h2>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          Aquí puedes escribir una descripción detallada de la pieza: origen, estilo, procedencia, técnica, materiales, dimensiones, contexto cultural, historia, usos, etc.
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Guerrero Opa</h2>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200"; style="text-align: justify;">
+          Escultura en bronce representando a un guerrero Opa, procedente de Nigeria y relacionada con la tradición artística yoruba y su simbología de autoridad, protección y fuerza espiritual. La figura aparece de pie, sosteniendo atributos rituales y con armadura decorada, transmitiendo poder y presencia ceremonial.
+        </p>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200"; style="text-align: justify;">
+          Realizada en fundición tradicional, la obra muestra un acabado oscurecido y pátina propia del tiempo, con detalles en el rostro y la vestimenta que recuerdan las prestigiosas producciones del arte del antiguo reino de Benín y su influencia en la región yoruba.
+        </p>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200"; style="text-align: justify;">
+          La figura se alza sobre una base decorada, lo que refuerza su verticalidad y la percusión simbólica propia de los objetos ligados al linaje y la protección.
         </p>
         <ul class="list-disc pl-5 text-gray-200">
           <li><strong>Tamaño:</strong> 35 cm de alto</li>
           <li><strong>Material:</strong> Bronce</li>
           <li><strong>Origen:</strong> Región Yoruba, siglo XIX</li>
-          <li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>
+         <!----> <li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
         </ul>
       </div>
 
@@ -46,7 +52,7 @@
     <div class="grid grid-cols-1 gap-6">
       <a href="../mis_fotos/bronces/bronce4_1.jpeg" class="glightbox"><img src="../mis_fotos/bronces/bronce4_1.jpeg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza bronce foto 2" /></a>
       <a href="mis_fotos/bronces/bronce1_3.jpg" class="glightbox"><img src="mis_fotos/bronces/bronce1_3.jpg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza bronce foto 3" /></a>
-      <a href="mis_fotos/bronces/bronce1_4.jpg" class="glightbox"><img src="mis_fotos/bronces/bronce1_4.jpg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza bronce foto 4" /></a>
+     
     </div>
 
     <!-- Botón de volver -->
