--- a/piezasbroncehtml/pieza_bronce9.html
+++ b/piezasbroncehtml/pieza_bronce9.html
@@ -28,10 +28,10 @@
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
         <h2 class="text-3xl font-bold mb-4 text-gray-200">Recipiente ofrendas Baulé</h2>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200">
+        <p class="text-lg leading-relaxed mb-4 text-gray-200";style="text-align: justify;">
         Recipiente ritual utilizado por el pueblo Baulé (Akan) de Costa de Marfil, fabricado mediante técnicas de fundición en bronce (cire perdue / cera perdida).
         </p>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200">
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ;style="text-align: justify;">
         Es una caja o recipiente ritual en el que se depositaban: ofrendas (dinero, alimentos, nueces de kola, perfumes)
 
 objetos protectores
@@ -42,12 +42,15 @@ sustancias usadas por adivinos o sacerdotes (komian)
 
 Normalmente se fabrican en bronce, aunque también pueden existir en latón (messing).
         </p>
+         <p class="text-lg leading-relaxed mb-4 text-gray-200" ;style="text-align: justify;">
+       El recipiente presenta una decoración en alto relieve con motivos geométricos y simbólicos característicos de la estética baulé. La figura de un ave en la tapa, modelada con formas estilizadas, es un elemento recurrente en el arte ritual africano y puede simbolizar mensajeros entre el mundo terrenal y el espiritual. Este tipo de iconografía resalta el papel de la pieza como contenedor de objetos sagrados y mediador en prácticas de adivinación, curación o protección.
+        </p>
 
         <ul class="list-disc pl-5 text-gray-200">
           <li><strong>Tamaño:</strong> 35 cm de alto</li>
           <li><strong>Material:</strong> Bronce</li>
           <li><strong>Origen:</strong> Costa de Marfil</li>
-          <li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>
+          <!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
         </ul>
       </div>
 
