--- a/piezasbroncehtml/pieza_bronce11.html
+++ b/piezasbroncehtml/pieza_bronce11.html
@@ -27,15 +27,21 @@
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">Bronce 1 del siglo XX</h2>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          Aquí puedes escribir una descripción detallada de la pieza: origen, estilo, procedencia, técnica, materiales, dimensiones, contexto cultural, historia, usos, etc.
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Mujer con Vasija - Escultura Contemporánea de Inspiración Africana</h2>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+          Esta escultura representa la figura estilizada de una mujer africana portando una vasija, un motivo recurrente en el arte contemporáneo inspirado en las culturas del África subsahariana. La pieza combina un cuerpo de líneas alargadas y pulidas con un vestido de textura rugosa y tonalidades terrosas, creando un contraste que acentúa la elegancia y la presencia de la figura.
+        </p>
+         <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+          El peinado en nudos y los adornos como pendientes y brazaletes evocan elementos estéticos tradicionales de diversas comunidades africanas, mientras que la vasija sugiere tareas cotidianas relacionadas con el agua, el sustento y la vida doméstica. Estos elementos convierten a la figura en un símbolo de resiliencia, trabajo y continuidad cultural.
+        </p>
+         <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+          La pieza destaca tanto por su fuerza simbólica como por su delicadeza formal, ofreciendo una mirada contemporánea a la identidad femenina africana y a la poética de la vida cotidiana.
         </p>
         <ul class="list-disc pl-5 text-gray-200">
           <li><strong>Tamaño:</strong> 35 cm de alto</li>
           <li><strong>Material:</strong> Bronce</li>
-          <li><strong>Origen:</strong> Región Yoruba, siglo XIX</li>
-          <li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>
+          <li><strong>Origen:</strong> Contemporaneo. Senegal</li>
+          <!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
         </ul>
       </div>
 
