--- a/piezasbroncehtml/pieza_bronce14.html
+++ b/piezasbroncehtml/pieza_bronce14.html
@@ -28,13 +28,13 @@
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
         <h2 class="text-3xl font-bold mb-4 text-gray-200">Bronce caballero Dogón</h2>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200">
+        <p class="text-lg leading-relaxed mb-4 text-gray-200"; style="text-align: justify;" >
           Estas esculturas fueron realizadas por herreros de la casta especializada en metalurgia entre los Dogon (conocidos tradicionalmente como “irím” — los “hombres del fuego”). 
 
 
 Las técnicas usadas son análogas a las empleadas en otras zonas de África para broncería: fundición mediante cera perdida (“lost‑wax casting”).
         </p>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200">
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
           Escultura en bronce que representa dos figuras montadas en un caballo —  “cavaliers Dogon”. Estas piezas suelen ser estilizadas, con proporciones propias del arte tradicional.
         </p>
 
