--- a/piezasbroncehtml/pieza_bronce19.html
+++ b/piezasbroncehtml/pieza_bronce19.html
@@ -28,6 +28,18 @@
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
         <h2 class="text-3xl font-bold mb-4 text-gray-200">Flautista Ife</h2>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+         Figura vertical tocando trompeta larga: Postura ceremonial, gesto de invocación o anuncio ritual.
+
+Vestimenta decorada: Falda con relieves, tocado texturizado, brazaletes y collar, todos elementos de estatus.
+
+Base perforada con anillas: Posible sistema de fijación para altares o exhibición ritual.
+
+Rostro estilizado pero expresivo: Ojos prominentes, labios marcados, equilibrio entre abstracción y naturalismo.
+        </p>
+       
+
+
          <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
         La cultura Ife (a veces escrita Ile-Ife) es una de las más importantes y antiguas civilizaciones de África Occidental, ubicada en el suroeste de Nigeria. Es considerada la cuna espiritual y mítica del pueblo yoruba.
         </p>
@@ -36,7 +48,7 @@
         </p>
        
         <ul class="list-disc pl-5 text-gray-200">
-          <li><strong>Tamaño:</strong> 35 cm de alto</li>
+          <li><strong>Tamaño:</strong> 55 cm de alto</li>
           <li><strong>Material:</strong> Bronce</li>
           <li><strong>Origen:</strong> Nigeria</li>
           <!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
