--- a/piezasbroncehtml/pieza_bronce18.html
+++ b/piezasbroncehtml/pieza_bronce18.html
@@ -27,15 +27,28 @@
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">Bronce 1 del siglo XX</h2>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          Aquí puedes escribir una descripción detallada de la pieza: origen, estilo, procedencia, técnica, materiales, dimensiones, contexto cultural, historia, usos, etc.
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Maternidad contemporanea en bronce</h2>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+          Figura femenina estilizada: Cuerpo alargado, vestido acampanado, postura vertical.
+
+Niño en el brazo izquierdo: Representa protección, vínculo materno y continuidad generacional.
+
+Libro en la mano derecha: Símbolo de educación, sabiduría y transmisión de conocimiento.
+
+Estilo abstracto: Superficies lisas, sin rasgos faciales detallados, énfasis en la forma y el gesto.
+        </p>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+          Celebración de la maternidad moderna: La mujer como madre, educadora y figura de empoderamiento.
+
+Objeto conmemorativo o decorativo: Ideal para espacios culturales, educativos o institucionales.
+
+Símbolo de valores sociales contemporáneos: Equilibrio entre tradición y modernidad.
         </p>
         <ul class="list-disc pl-5 text-gray-200">
-          <li><strong>Tamaño:</strong> 35 cm de alto</li>
+          <li><strong>Tamaño:</strong> 30 cm de alto</li>
           <li><strong>Material:</strong> Bronce</li>
-          <li><strong>Origen:</strong> Región Yoruba, siglo XIX</li>
-          <li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>
+          <li><strong>Origen:</strong> Contemporaneo. Senegal</li>
+          <!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
         </ul>
       </div>
 
@@ -44,9 +57,7 @@
     <!-- Galería adicional con lightbox -->
     <h3 class="text-2xl font-semibold mt-10 mb-4 text-gray-700">Galería Adicional</h3>
     <div class="grid grid-cols-1 gap-6">
-      <a href="../mis_fotos/bronces/bronce18_1.jpeg" class="glightbox"><img src="../mis_fotos/bronces/bronce18_1.jpeg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza bronce foto 2" /></a>
-      <a href="mis_fotos/bronces/bronce1_3.jpg" class="glightbox"><img src="mis_fotos/bronces/bronce1_3.jpg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza bronce foto 3" /></a>
-      <a href="mis_fotos/bronces/bronce1_4.jpg" class="glightbox"><img src="mis_fotos/bronces/bronce1_4.jpg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza bronce foto 4" /></a>
+     
     </div>
 
     <!-- Botón de volver -->
