--- a/piezascascohtml/pieza_casco5.html
+++ b/piezascascohtml/pieza_casco5.html
@@ -28,7 +28,7 @@
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
         <h2 class="text-3xl font-bold mb-4 text-gray-200">Casco Bozo</h2>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200">
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
           Los cascos Bozo son máscaras de madera que cubren la cabeza como un casco, es decir, se encajan completamente sobre el cráneo del danzante. Se usan principalmente en espectáculos públicos y rituales.
           <br>
           Los Bozo son un grupo étnico de Mali, asentado principalmente a lo largo del río Níger, en ciudades como Mopti, Djenné y Ségou.
@@ -36,6 +36,14 @@
 Tradicionalmente pescadores, barqueros y guardianes de rituales acuáticos.
 
 Su arte está profundamente vinculado al agua, a los animales del río y a mitologías sobre los genios del agua (nyama o farin).
+            <br>
+            Ritual agrícola: Se usa en ceremonias que acompañan la siembra, las primeras lluvias y la cosecha.
+
+Celebración de la fertilidad: Representa la llegada de los frutos de la tierra y la abundancia.
+
+Invocación de espíritus acuáticos: Los Bozo creen en entidades que habitan los ríos y que protegen o castigan según el comportamiento humano.
+
+Elemento de danza y teatro ritual: A menudo se acompaña de marionetas y narraciones míticas.
         </p>
         <ul class="list-disc pl-5 text-gray-200">
           <li><strong>Tamaño:</strong> 35 cm de alto</li>
