--- a/piezasestatuahtml/pieza_estatua1.html
+++ b/piezasestatuahtml/pieza_estatua1.html
@@ -27,15 +27,30 @@
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">Bronce 1 del siglo XX</h2>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          Aquí puedes escribir una descripción detallada de la pieza: origen, estilo, procedencia, técnica, materiales, dimensiones, contexto cultural, historia, usos, etc.
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Pareja de esculturas estilizadas en madera</h2>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+          Figura izquierda: Brazo cruzado sobre el pecho, postura introspectiva.
+
+Figura derecha: Brazo levantado sosteniendo objeto geométrico sobre la cabeza, gesto de ofrenda o carga ritual.
+
+Estilo abstracto: Cuerpos alargados, extremidades finas, ausencia de rasgos faciales detallados.
+
+Textura inferior tallada: Motivos geométricos que sugieren vestimenta o escarificación.
+
+Bases circulares: Estabilidad y presentación escultórica.
+        </p>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+          Representación de arquetipos humanos: Posiblemente figuras femeninas o ancestros estilizados.
+
+Objeto decorativo con carga espiritual: Evocan valores como dignidad, introspección, fuerza o sabiduría.
+
+Símbolo de identidad cultural: Abstracción formal que remite a la estética africana sin literalismo.
         </p>
         <ul class="list-disc pl-5 text-gray-200">
-          <li><strong>Tamaño:</strong> 35 cm de alto</li>
-          <li><strong>Material:</strong> Bronce</li>
-          <li><strong>Origen:</strong> Región Yoruba, siglo XIX</li>
-          <li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>
+          <li><strong>Tamaño:</strong> 40 cm de alto</li>
+          <li><strong>Material:</strong> Madera</li>
+          <li><strong>Origen:</strong> Contemporaneo. Senegal</li>
+          <!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
         </ul>
       </div>
 
@@ -44,9 +59,8 @@
     <!-- Galería adicional con lightbox -->
     <h3 class="text-2xl font-semibold mt-10 mb-4 text-gray-700">Galería Adicional</h3>
     <div class="grid grid-cols-1 gap-6">
-      <a href="../mis_fotos/estatuas/estatua1_1.jpeg" class="glightbox"><img src="../mis_fotos/estatuas/estatua1_1.jpeg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza bronce foto 2" /></a>
-      <a href="mis_fotos/estatuas/estatua1_2.jpeg" class="glightbox"><img src="mis_fotos/estatuas/estatua1_2.jpeg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza bronce foto 3" /></a>
-      <a href="mis_fotos/bronces/bronce1_4.jpg" class="glightbox"><img src="mis_fotos/bronces/bronce1_4.jpg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza bronce foto 4" /></a>
+      <!--<a href="../mis_fotos/estatuas/estatua1_1.jpeg" class="glightbox"><img src="../mis_fotos/estatuas/estatua1_1.jpeg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza bronce foto 2" /></a>-->
+      
     </div>
 
     <!-- Botón de volver -->
