--- a/piezasestatuahtml/pieza_estatua8.html
+++ b/piezasestatuahtml/pieza_estatua8.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Pieza estatua 8</title>
+  <title>Pieza estatua 13</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <!-- Lightbox CSS y JS simple -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/glightbox/3.2.0/css/glightbox.min.css" integrity="sha512-+KPZs1BTSa6l5vIk91jGJ6dW9UgVSpvGx1Xr2N7m9UTh3f97k2XoZTz2r6H5hVxZx52r6hPSNnD6bk6XkWPMig==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -20,40 +20,39 @@
       <!-- Imagen principal a la izquierda con marco decorativo y efecto hover -->
       <div class="md:w-1/2 flex justify-center transition-transform transform hover:scale-105">
         <a href="../mis_fotos/estatuas/estatua8.jpeg" class="glightbox">
-          <img src="../mis_fotos/estatuas/estatua8.jpeg"class="rounded-xl shadow-lg w-3/4 border-4 border-yellow-800" alt="Pieza bronce foto 1" />
+          <img src="../mis_fotos/estatuas/estatua8.jpeg" class="rounded-xl shadow-lg w-3/4 border-4 border-yellow-800" alt="Pieza estatua foto 13" />
+        </a>
       </div>
 
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
         <h2 class="text-3xl font-bold mb-4 text-gray-200">Estatua Baga</h2>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200">
-         Los Baga son un pueblo de África Occidental que vive a lo largo de la costa Atlántica en la parte sur de Guinea (Guinea-Conakry) y en la costa norte de Guinea-Bissau.
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
+       Los Baga son un pueblo de África Occidental que vive a lo largo de la costa Atlántica en la parte sur de Guinea (Guinea-Conakry) y en la costa norte de Guinea-Bissau.
         </p>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200">
-         Tradicionalmente eran animistas; aunque muchos adoptaron el islam, la herencia artística y las tradiciones antiguas perduran en sus esculturas y máscaras
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
+          Tradicionalmente eran animistas; aunque muchos adoptaron el islam, la herencia artística y las tradiciones antiguas perduran en sus esculturas y máscaras
         </p>
-
-         <p class="text-lg leading-relaxed mb-4 text-gray-200">
-         Esculturas ligadas a lo simbólico: algunas representan espíritus protectores, antepasados o fuerzas divinas.
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
+          Esculturas ligadas a lo simbólico: algunas representan espíritus protectores, antepasados o fuerzas divinas.
         </p>
 
         <ul class="list-disc pl-5 text-gray-200">
-          <li><strong>Tamaño:</strong> 35 cm de alto</li>
+          <li><strong>Tamaño:</strong> 20 cm de alto</li>
           <li><strong>Material:</strong> Madera</li>
-          <li><strong>Origen:</strong> Guinea -Conakry y Guinea Bissau</li>
-          <!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
+          <li><strong>Origen:</strong> Región Yoruba</li>
+         <!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
         </ul>
       </div>
 
     </div>
 
-    <!-- Galería adicional con lightbox -->
+    <!--Galería adicional con lightbox -->
     <h3 class="text-2xl font-semibold mt-10 mb-4 text-gray-700">Galería Adicional</h3>
     <div class="grid grid-cols-1 gap-6">
-      <a href="../mis_fotos/estatuas/estatua8_1.jpeg" class="glightbox"><img src="../mis_fotos/estatuas/estatua8_1.jpeg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza bronce foto 2" /></a>
-      <a href="mis_fotos/estatuas/estatua8_2.jpeg" class="glightbox"><img src="mis_fotos/estatuas/estatua8_2.jpeg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza bronce foto 3" /></a>
-      <a href="mis_fotos/bronces/bronce1_4.jpg" class="glightbox"><img src="mis_fotos/bronces/bronce1_4.jpg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza bronce foto 4" /></a>
+      <a href="../mis_fotos/estatuas/estatua8.jpeg" class="glightbox"><img src="../mis_fotos/estatuas/estatua8.jpeg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza estatua foto 8" /></a>
+      
     </div>
 
     <!-- Botón de volver -->
