--- a/piezasestatuahtml/pieza_estatua5.html
+++ b/piezasestatuahtml/pieza_estatua5.html
@@ -28,14 +28,26 @@
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
         <h2 class="text-3xl font-bold mb-4 text-gray-200">Estatua 1 del siglo XX a.d.c.</h2>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          Aquí puedes escribir una descripción detallada de la pieza: origen, estilo, procedencia, técnica, materiales, dimensiones, contexto cultural, historia, usos, etc.
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
+         Figura femenina estilizada: Proporciones alargadas, cintura estrecha, vestido largo con motivos geométricos en tonos tierra.
+
+Vasija circular sobre la cabeza: Sostenida con ambas manos, gesto de carga ritual o cotidiana.
+
+Parte inferior en cuerno: Base orgánica que aporta fuerza simbólica y conexión con prácticas tradicionales.
+
+Parte superior en escayola policromada: Decoración en marrón, naranja y amarillo, con patrones triangulares y líneas.
+
+Estilo abstracto: Rasgos faciales simplificados, énfasis en la postura y el gesto.
         </p>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
+          El cuerno, en muchas culturas africanas, es símbolo de fuerza, fertilidad y poder espiritual. La escayola policromada introduce un lenguaje plástico moderno, accesible y decorativo. Esta combinación refleja cómo los artistas africanos contemporáneos experimentan con materiales tradicionales y modernos, creando piezas que son a la vez raíces rituales y expresiones artísticas contemporáneas.
+        </p>
+
         <ul class="list-disc pl-5 text-gray-200">
-          <li><strong>Tamaño:</strong> 35 cm de alto</li>
-          <li><strong>Material:</strong> Bronce</li>
-          <li><strong>Origen:</strong> Región Yoruba, siglo XIX</li>
-          <li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>
+          <li><strong>Tamaño:</strong> 40 cm de alto</li>
+          <li><strong>Material:</strong> Escayola y cuerno</li>
+          <li><strong>Origen:</strong> Contemporanea. Senegal</li>
+          <!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
         </ul>
       </div>
 
@@ -45,8 +57,7 @@
     <h3 class="text-2xl font-semibold mt-10 mb-4 text-gray-700">Galería Adicional</h3>
     <div class="grid grid-cols-1 gap-6">
       <a href="../mis_fotos/estatuas/estatua5_1.jpeg" class="glightbox"><img src="../mis_fotos/estatuas/estatua5_1.jpeg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza bronce foto 2" /></a>
-      <a href="mis_fotos/estatuas/estatua5_2.jpeg" class="glightbox"><img src="mis_fotos/estatuas/estatua5_2.jpeg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza bronce foto 3" /></a>
-      <a href="mis_fotos/bronces/bronce1_4.jpg" class="glightbox"><img src="mis_fotos/bronces/bronce1_4.jpg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza bronce foto 4" /></a>
+     
     </div>
 
     <!-- Botón de volver -->
