--- a/piezasestatuahtml/pieza_estatua28.html
+++ b/piezasestatuahtml/pieza_estatua28.html
@@ -27,15 +27,21 @@
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">Estatua 1 del siglo XX a.d.c.</h2>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          Aquí puedes escribir una descripción detallada de la pieza: origen, estilo, procedencia, técnica, materiales, dimensiones, contexto cultural, historia, usos, etc.
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Estatua Fang</h2>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+          Escultura tradicional del pueblo Fang, característico de la región de Gabón, Camerún y Guinea Ecuatorial. Tallada en madera, representa una figura humana en posición frontal y con expresión serena, rasgos habituales en las obras asociadas al culto de los antepasados Fang.
+        </p>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+          La pieza muestra la clásica estilización corporal de esta cultura, con cabeza prominente, rasgos geométricos en el rostro y un modelado sencillo pero cargado de carácter. Esta tipología suele vincularse a los receptáculos rituales del byeri, dedicados a honrar y proteger las reliquias familiares, así como a preservar la memoria de los antepasados dentro de la comunidad.
+        </p>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+          El acabado presenta pátina y desgaste natural, aportando autenticidad visual y un atractivo tono cálido en la madera. Obra ideal para coleccionistas y amantes del arte tribal africano, muy representativa del estilo Fang y de su profunda tradición espiritual.
         </p>
         <ul class="list-disc pl-5 text-gray-200">
-          <li><strong>Tamaño:</strong> 35 cm de alto</li>
-          <li><strong>Material:</strong> Bronce</li>
-          <li><strong>Origen:</strong> Región Yoruba, siglo XIX</li>
-          <li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>
+          <li><strong>Tamaño:</strong> 40 cm de alto</li>
+          <li><strong>Material:</strong> Madera</li>
+          <li><strong>Origen:</strong> Gabón / Camerún</li>
+          <!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
         </ul>
       </div>
 
@@ -46,7 +52,7 @@
     <div class="grid grid-cols-1 gap-6">
       <a href="../mis_fotos/estatuas/estatua28_1.jpeg" class="glightbox"><img src="../mis_fotos/estatuas/estatua28_1.jpeg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza estatua foto 28_1" /></a>
       <a href="mis_fotos/estatuas/estatua28_2.jpeg" class="glightbox"><img src="mis_fotos/estatuas/estatua28_2.jpeg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza bronce foto 3" /></a>
-      <a href="mis_fotos/bronces/bronce1_4.jpeg" class="glightbox"><img src="mis_fotos/bronces/bronce1_4.jpeg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza bronce foto 4" /></a>
+       
     </div>
 
     <!-- Botón de volver -->
