--- a/piezasmascarahtml/pieza_mascara8.html
+++ b/piezasmascarahtml/pieza_mascara8.html
@@ -27,15 +27,21 @@
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">MASCARA 1 del siglo XX</h2>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          Aquí puedes escribir una descripción detallada de la pieza: origen, estilo, procedencia, técnica, materiales, dimensiones, contexto cultural, historia, usos, etc.
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Máscara Banga</h2>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+         Máscara tradicional procedente de Camerún, asociada a las ceremonias conocidas como “Banga”, vinculadas a prácticas rituales, identidad comunitaria y expresión simbólica dentro de la cultura de África central.
+        </p>
+         <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+         Tallada a mano en madera, presenta un diseño geométrico característico y una atractiva policromía en tonos ocre, rojo, blanco y negro, generando una imagen equilibrada y moderna a la vez. La pieza destaca por sus formas planas y angulares, que subrayan los rasgos del rostro y aportan un notable impacto visual.
+        </p>
+         <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+         El acabado muestra pátina y desgaste propio del tiempo, otorgándole carácter y presencia. Este tipo de máscaras se ha empleado tradicionalmente en danzas y celebraciones rituales, pero también constituye hoy una pieza muy apreciada dentro del arte tribal africano por su estética contemporánea y fuerte identidad cultural.
         </p>
         <ul class="list-disc pl-5 text-gray-200">
-          <li><strong>Tamaño:</strong> 35 cm de alto</li>
-          <li><strong>Material:</strong> Bronce</li>
-          <li><strong>Origen:</strong> Región Yoruba, siglo XIX</li>
-          <li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>
+          <li><strong>Tamaño:</strong> 25 cm de alto</li>
+          <li><strong>Material:</strong> Madera</li>
+          <li><strong>Origen:</strong> Camerún</li>
+          <<!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
         </ul>
       </div>
 
@@ -45,7 +51,7 @@
     <h3 class="text-2xl font-semibold mt-10 mb-4 text-gray-700">Galería Adicional</h3>
     <div class="grid grid-cols-1 gap-6">
       <a href="../mis_fotos/mascaras/mascara8_1.jpeg" class="glightbox"><img src="mis_fotos/mascaras/mascara8_1.jpeg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza mascara foto 8" /></a>
-      <a href="mis_fotos/bronces/bronce8_2.jpeg" class="glightbox"><img src="mis_fotos/bronces/bronce8_2.jpeg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza bronce foto 4" /></a>
+      
     </div>
 
     <!-- Botón de volver -->
