--- a/piezasmascarahtml/pieza_mascara9.html
+++ b/piezasmascarahtml/pieza_mascara9.html
@@ -27,15 +27,27 @@
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">MASCARA 1 del siglo XX</h2>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          Aquí puedes escribir una descripción detallada de la pieza: origen, estilo, procedencia, técnica, materiales, dimensiones, contexto cultural, historia, usos, etc.
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Masque singe Bambara</h2>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
+          Los Bambara utilizan máscaras zoomorfas en sus rituales de iniciación y en las danzas de las sociedades Komo, Nama y Tyi Wara. El masque singe representa al mono como figura ambigua: inteligente pero travieso, cercano al hombre pero desviado del orden social. Su función es educativa y moralizante, mostrando lo que debe evitarse en la conducta humana.
+        </p>
+         <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
+          Forma alargada y vertical: Rasgos geométricos, estilización abstracta.
+
+Ojos perforados y cresta central: Elementos típicos de máscaras Bambara, que enfatizan visión y poder.
+
+Decoración en tonos tierra (rojo, amarillo, marrón): Uso de pigmentos naturales, con patrón punteado que puede evocar pelaje o energía espiritual.
+
+Elemento rectangular rojo sobre los ojos: Posible alusión a peinado ritual, cresta o símbolo de estatus.
+        </p>
+         <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
+          En la cosmología Bambara, el mono representa la inteligencia sin disciplina, el movimiento sin propósito. Por eso, su máscara se usa para advertir y educar, no para venerar. Es una figura que refleja al hombre cuando pierde el equilibrio entre cuerpo, mente y espíritu.
         </p>
         <ul class="list-disc pl-5 text-gray-200">
           <li><strong>Tamaño:</strong> 35 cm de alto</li>
-          <li><strong>Material:</strong> Bronce</li>
-          <li><strong>Origen:</strong> Región Yoruba, siglo XIX</li>
-          <li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>
+          <li><strong>Material:</strong> Madera</li>
+          <li><strong>Origen:</strong> Mali</li>
+          <!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
         </ul>
       </div>
 
@@ -45,7 +57,7 @@
     <h3 class="text-2xl font-semibold mt-10 mb-4 text-gray-700">Galería Adicional</h3>
     <div class="grid grid-cols-1 gap-6">
       <a href="../mis_fotos/mascaras/mascara9_1.jpeg" class="glightbox"><img src="mis_fotos/mascaras/mascara9_1.jpeg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza mascara foto 9" /></a>
-      <a href="mis_fotos/bronces/bronce9_2.jpeg" class="glightbox"><img src="mis_fotos/bronces/bronce9_2.jpeg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza bronce foto 4" /></a>
+      
     </div>
 
     <!-- Botón de volver -->
