--- a/piezasmascarahtml/pieza_mascara5.html
+++ b/piezasmascarahtml/pieza_mascara5.html
@@ -24,18 +24,24 @@
         </a>
       </div>
 
-      <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
+      <!-- Descripción a la derecha con fondo, borde, sombr a y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">MASCARA 1 del siglo XX</h2>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          Aquí puedes escribir una descripción detallada de la pieza: origen, estilo, procedencia, técnica, materiales, dimensiones, contexto cultural, historia, usos, etc.
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Máscara Idoma</h2>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+        Elegante máscara tradicional del pueblo Idoma, originaria del centro-sur de Nigeria. Tallada a mano en madera y pigmentada con tonos negro, blanco y rojo, presenta los rasgos característicos de esta cultura: ojos entrecerrados, escarificaciones faciales y simbolismo geométrico en la frente.
+        </p>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+        Las áreas blancas, relacionadas con lo espiritual y el culto a los antepasados, contrastan con la tonalidad oscura de la madera, creando una pieza de fuerte presencia estética.
+        </p>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+       La máscara conserva un excelente aspecto, con pátina y pequeños desgastes que aportan carácter y autenticidad. 
         </p>
         <ul class="list-disc pl-5 text-gray-200">
           <li><strong>Tamaño:</strong> 35 cm de alto</li>
-          <li><strong>Material:</strong> Bronce</li>
-          <li><strong>Origen:</strong> Región Yoruba, siglo XIX</li>
-          <li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>
+          <li><strong>Material:</strong> Madera</li>
+          <li><strong>Origen:</strong> Nigeria</li>
+          <!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
         </ul>
       </div>
 
@@ -45,7 +51,7 @@
     <h3 class="text-2xl font-semibold mt-10 mb-4 text-gray-700">Galería Adicional</h3>
     <div class="grid grid-cols-1 gap-6">
       <a href="../mis_fotos/mascaras/mascara5_1.jpeg" class="glightbox"><img src="mis_fotos/mascaras/mascara5_1.jpeg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza mascara foto 5" /></a>
-      <a href="mis_fotos/bronces/bronce5_2.jpeg" class="glightbox"><img src="mis_fotos/bronces/bronce5_2.jpeg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza bronce foto 4" /></a>
+      
     </div>
 
     <!-- Botón de volver -->
