--- a/piezasmascarahtml/pieza_mascara6.html
+++ b/piezasmascarahtml/pieza_mascara6.html
@@ -27,15 +27,21 @@
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">MASCARA 1 del siglo XX</h2>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          Aquí puedes escribir una descripción detallada de la pieza: origen, estilo, procedencia, técnica, materiales, dimensiones, contexto cultural, historia, usos, etc.
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Mascara Banga. Malade</h2>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+          Singular máscara procedente de Camerún, vinculada a las tradiciones conocidas como “Banga”, empleadas en contextos rituales relacionados con la enfermedad, la salud y la protección espiritual. Su policromía dividida en zonas cromáticas —ocres, azules y rojos— representa simbólicamente el desequilibrio corporal y el proceso de curación.
+        </p>
+         <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+          Tallada a mano en madera con pigmentación natural, la obra muestra ojos semicerrados, volúmenes faciales acentuados y trazos irregulares que refuerzan su expresividad. El modelado asimétrico y el uso del color aluden al tránsito entre lo físico y lo espiritual, elemento característico de estas máscaras africanas utilizadas históricamente para ceremonias, danzas y prácticas curativas.
+        </p>
+         <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+          Pieza de gran presencia, con pátina visible y desgaste acorde a su antigüedad y manipulación, lo que aporta carácter y autenticidad estética.
         </p>
         <ul class="list-disc pl-5 text-gray-200">
-          <li><strong>Tamaño:</strong> 35 cm de alto</li>
-          <li><strong>Material:</strong> Bronce</li>
-          <li><strong>Origen:</strong> Región Yoruba, siglo XIX</li>
-          <li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>
+          <li><strong>Tamaño:</strong> 25 cm de alto</li>
+          <li><strong>Material:</strong> Madera</li>
+          <li><strong>Origen:</strong> Camerún</li>
+          <!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
         </ul>
       </div>
 
@@ -45,7 +51,7 @@
     <h3 class="text-2xl font-semibold mt-10 mb-4 text-gray-700">Galería Adicional</h3>
     <div class="grid grid-cols-1 gap-6">
       <a href="../mis_fotos/mascaras/mascara6_1.jpeg" class="glightbox"><img src="mis_fotos/mascaras/mascara6_1.jpeg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza mascara foto 6" /></a>
-      <a href="mis_fotos/bronces/bronce6_2.jpeg" class="glightbox"><img src="mis_fotos/bronces/bronce6_2.jpeg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza bronce foto 4" /></a>
+     <!-- <a href="mis_fotos/bronces/bronce6_2.jpeg" class="glightbox"><img src="mis_fotos/bronces/bronce6_2.jpeg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza bronce foto 4" /></a>-->
     </div>
 
     <!-- Botón de volver -->
