--- a/piezasmascarahtml/pieza_mascara17.html
+++ b/piezasmascarahtml/pieza_mascara17.html
@@ -27,15 +27,31 @@
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">MASCARA 1 del siglo XX</h2>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          Aquí puedes escribir una descripción detallada de la pieza: origen, estilo, procedencia, técnica, materiales, dimensiones, contexto cultural, historia, usos, etc.
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Máscara Dan</h2>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
+          Máscara ceremonial Dan, originaria de Costa de Marfil y Liberia, donde los pueblos Dan (también conocidos como Yacouba) han desarrollado una de las tradiciones más ricas en el uso ritual de máscaras. Las máscaras Dan se utilizan en contextos rituales, sociales y judiciales, y cada tipo tiene una función específica: desde controlar el orden comunitario hasta representar espíritus de la selva o realizar danzas de entretenimiento.
+        </p>
+         <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
+          Rostro alargado y oscuro: Tallado en madera con pátina ritual.
+
+Nariz prominente y ojos rasgados: Rasgos estilizados que transmiten vigilancia y poder espiritual.
+
+Hechura refinada: Simetría facial, proporciones armoniosas.
+
+Tocado cónico cubierto de cauríes: Los cauríes simbolizan riqueza, fertilidad y protección espiritual.
+
+Fibra colgante en la parte inferior: Elemento dinámico que acompaña el movimiento en la danza.
+
+Tufo vegetal en la cúspide: Posible alusión a lo orgánico, lo ancestral o lo espiritual.
+        </p>
+         <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
+          En la cultura Dan, las máscaras no son simples objetos: son entidades vivas cuando se activan ritualmente. Esta máscara, con su tocado de cauríes y su fibra vegetal, probablemente pertenece a una categoría de máscara de autoridad o protección, usada por miembros iniciados de sociedades secretas como el Gle o el Gor.
         </p>
         <ul class="list-disc pl-5 text-gray-200">
           <li><strong>Tamaño:</strong> 35 cm de alto</li>
-          <li><strong>Material:</strong> Bronce</li>
-          <li><strong>Origen:</strong> Región Yoruba, siglo XIX</li>
-          <li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>
+          <li><strong>Material:</strong> Madera</li>
+          <li><strong>Origen:</strong> Costa de Marfil</li>
+          <!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
         </ul>
       </div>
 
