--- a/piezasmascarahtml/pieza_mascara19.html
+++ b/piezasmascarahtml/pieza_mascara19.html
@@ -28,21 +28,20 @@
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
         <h2 class="text-3xl font-bold mb-4 text-gray-200">Máscara Igbo (a veces Ibo)</h2>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          Las máscaras forman parte de un sistema ceremonial complejo asociado a:
-
-cultos ancestrales,
-
-justicia y orden social,
-
-ritos de iniciación,
-
-festividades agrícolas,
-
-celebraciones de cosecha,
-
-culto a la belleza y a la moralidad.
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
+          Máscara Igbo del sureste de Nigeria, caracterizada por su estructura facial estilizada, los ojos cerrados, la sonrisa contenida y el tocado elaborado con motivos geométricos y simbólicos.
         </p>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
+        Los Igbo poseen una rica tradición de máscaras utilizadas en contextos rituales, sociales y espirituales, especialmente en las sociedades masquerade (Mmanwu), donde las máscaras representan espíritus ancestrales, fuerzas de la naturaleza o ideales sociales.
+        </p>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
+        Máscara de espíritu ancestral (Mmanwu): Usada en festivales, funerales o ceremonias de iniciación.
+
+Representación de virtud o autoridad: La expresión serena y los ojos cerrados evocan sabiduría y autocontrol.
+
+Elemento de mediación espiritual: El portador de la máscara encarna temporalmente al espíritu representado.
+        </p>
+
         <ul class="list-disc pl-5 text-gray-200">
           <li><strong>Tamaño:</strong> 35 cm de alto</li>
           <li><strong>Material:</strong> Madera</li>
